--- a/AgenciaFiscalPresentacion/src/main/java/com/mycompany/agenciafiscalpresentacion/FormConsultas.form
+++ b/AgenciaFiscalPresentacion/src/main/java/com/mycompany/agenciafiscalpresentacion/FormConsultas.form
@@ -153,17 +153,17 @@
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Group type="102" alignment="0" attributes="0">
                                           <EmptySpace min="-2" pref="143" max="-2" attributes="0"/>
-                                          <Component id="txtNumPlacasAnteriores" min="-2" max="-2" attributes="0"/>
+                                          <Component id="txtNombre" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <Component id="txtNumPlacasAnteriores2" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="txtFechaNacimiento" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <Component id="txtNumPlacasAnteriores1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="txtRfc" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                  <Component id="txfNumPlacasAnteriores1" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="txfNumPlacasAnteriores2" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="txfNumPlacasAnteriores" alignment="1" min="-2" pref="459" max="-2" attributes="0"/>
+                                  <Component id="txfRfc" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="txfFechaNacimiento" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="txfNombre" alignment="1" min="-2" pref="459" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
@@ -180,18 +180,18 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="txtNumPlacasAnteriores" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txfNumPlacasAnteriores" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtNombre" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txfNombre" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="txfNumPlacasAnteriores1" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtNumPlacasAnteriores1" min="-2" max="-2" attributes="0"/>
+                          <Component id="txfRfc" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtRfc" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="txtNumPlacasAnteriores2" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txfNumPlacasAnteriores2" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtFechaNacimiento" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txfFechaNacimiento" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="168" max="32767" attributes="0"/>
                       <Component id="btnAceptar" min="-2" max="-2" attributes="0"/>
@@ -201,28 +201,28 @@
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JTextField" name="txfNumPlacasAnteriores2">
+            <Component class="javax.swing.JTextField" name="txfFechaNacimiento">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Comic Sans MS" size="18" style="0"/>
                 </Property>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="txfNumPlacasAnteriores1">
+            <Component class="javax.swing.JTextField" name="txfRfc">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Comic Sans MS" size="18" style="0"/>
                 </Property>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="txfNumPlacasAnteriores">
+            <Component class="javax.swing.JTextField" name="txfNombre">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Comic Sans MS" size="18" style="0"/>
                 </Property>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="txtNumPlacasAnteriores">
+            <Component class="javax.swing.JLabel" name="txtNombre">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Comic Sans MS" size="24" style="0"/>
@@ -230,7 +230,7 @@
                 <Property name="text" type="java.lang.String" value="Nombre:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="txtNumPlacasAnteriores2">
+            <Component class="javax.swing.JLabel" name="txtFechaNacimiento">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Comic Sans MS" size="24" style="0"/>
@@ -238,7 +238,7 @@
                 <Property name="text" type="java.lang.String" value="Fecha de Nacimiento:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="txtNumPlacasAnteriores1">
+            <Component class="javax.swing.JLabel" name="txtRfc">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Comic Sans MS" size="24" style="0"/>
