--- a/AgenciaFiscalPresentacion/src/main/java/com/mycompany/agenciafiscalpresentacion/FormPlacasCarroRegistrado.form
+++ b/AgenciaFiscalPresentacion/src/main/java/com/mycompany/agenciafiscalpresentacion/FormPlacasCarroRegistrado.form
@@ -209,6 +209,9 @@
                   <Font name="Comic Sans MS" size="18" style="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txfNumPlacasAnterioresActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="txtNumPlacasAnteriores">
               <Properties>
@@ -230,7 +233,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Comic Sans MS" size="24" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Rfc del Nuevo due&#xf1;o:"/>
+                <Property name="text" type="java.lang.String" value="Rfc del due&#xf1;o:"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="btnAceptar">
